--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   <link href="css/daft-media.webflow.css" rel="stylesheet" type="text/css">
   <style>@media (max-width:991px) and (min-width:768px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="6d516a87-e157-c76f-40dd-97c5ec06cb6c"] {height:0px;}}@media (max-width:767px) and (min-width:480px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="6d516a87-e157-c76f-40dd-97c5ec06cb6c"] {height:0px;}}@media (max-width:479px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="6d516a87-e157-c76f-40dd-97c5ec06cb6c"] {height:0px;}}</style>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
- <script src="/form.js"></script>
+<script src="/js/form.js"></script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <link href="https://daft.media/contact" rel="canonical">
