--- a/contact.html
+++ b/contact.html
@@ -288,31 +288,128 @@ html, body {
         </div>
       </section>
     </section>
-    <section class="form-page">
+<section class="form-page">
   <div class="div-block-47">
     <div class="w-form">
-      <form id="email-form" name="email-form" data-name="Email Form" method="POST" data-netlify="true" data-wf-page-id="693ae7ff5b346f45f8241fb0" data-wf-element-id="9851e27c-ccc1-f57c-06b6-1c3517049e2d">
+
+      <form
+        id="email-form"
+        name="email-form"
+        method="POST"
+        action="/"
+        data-netlify="true"
+        data-netlify-honeypot="bot-field"
+      >
+
+        <!-- Netlify required -->
         <input type="hidden" name="form-name" value="email-form">
+        <input type="hidden" name="bot-field">
+
         <div class="w-layout-grid grid-10">
-          <div><label for="name" class="form-heading">Name &amp; Company</label><input class="text-field w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="name"></div>
-          <div><label for="email" class="form-heading">Your Email</label><input class="text-field w-input" maxlength="256" name="email" data-name="Email" placeholder="" type="email" id="email" required=""></div>
+          <div>
+            <label for="name" class="form-heading">Name &amp; Company</label>
+            <input class="text-field w-input" name="name" type="text" id="name">
+          </div>
+
+          <div>
+            <label for="email" class="form-heading">Your Email</label>
+            <input class="text-field w-input" name="email" type="email" id="email" required>
+          </div>
         </div>
+
         <div class="interested-in-wrap">
-          <h1 class="form-heading">I&#x27;m interested in...</h1>
-          <div class="needs-wrap"><label class="w-checkbox check-button-field"><input type="checkbox" id="Branding" name="Branding" data-name="Branding" class="w-checkbox-input checkbox"><span class="form-button-text w-form-label" for="Branding">Branding</span></label><label class="w-checkbox check-button-field"><input type="checkbox" name="Site-from-scratch" id="Site-from-scratch" data-name="Site from scratch" class="w-checkbox-input checkbox"><span class="form-button-text w-form-label" for="Site-from-scratch">Site from scratch</span></label><label class="w-checkbox check-button-field"><input type="checkbox" name="Maintenance" id="Maintenance" data-name="Maintenance" class="w-checkbox-input checkbox"><span class="form-button-text w-form-label" for="Maintenance">Maintenance</span></label><label class="w-checkbox check-button-field"><input type="checkbox" name="Video" id="Video" data-name="Video" class="w-checkbox-input checkbox"><span class="form-button-text w-form-label" for="Video">Video</span></label><label class="w-checkbox check-button-field"><input type="checkbox" name="Graphic-Design" id="Graphic-Design" data-name="Graphic Design" class="w-checkbox-input checkbox"><span class="form-button-text w-form-label" for="Graphic-Design">Graphic Design</span></label><label class="w-checkbox check-button-field"><input type="checkbox" name="Animation" id="Animation" data-name="Animation" class="w-checkbox-input checkbox"><span class="form-button-text w-form-label" for="Animation">Animation</span></label><label class="w-checkbox check-button-field"><input type="checkbox" name="Blue-Build" id="Blue-Build" data-name="Blue Build" class="w-checkbox-input checkbox"><span class="form-button-text w-form-label" for="Blue-Build">Blue Build</span></label><label class="w-checkbox check-button-field"><input type="checkbox" id="Subscription" name="Subscription" data-name="Subscription" class="w-checkbox-input checkbox"><span class="form-button-text w-form-label" for="Subscription">Subscription</span></label></div>
+          <h1 class="form-heading">I’m interested in…</h1>
+
+          <div class="needs-wrap">
+            <label class="w-checkbox check-button-field">
+              <input type="checkbox" name="InterestedIn[]" value="Branding" class="w-checkbox-input checkbox">
+              <span class="form-button-text w-form-label">Branding</span>
+            </label>
+
+            <label class="w-checkbox check-button-field">
+              <input type="checkbox" name="InterestedIn[]" value="Site from scratch" class="w-checkbox-input checkbox">
+              <span class="form-button-text w-form-label">Site from scratch</span>
+            </label>
+
+            <label class="w-checkbox check-button-field">
+              <input type="checkbox" name="InterestedIn[]" value="Maintenance" class="w-checkbox-input checkbox">
+              <span class="form-button-text w-form-label">Maintenance</span>
+            </label>
+
+            <label class="w-checkbox check-button-field">
+              <input type="checkbox" name="InterestedIn[]" value="Video" class="w-checkbox-input checkbox">
+              <span class="form-button-text w-form-label">Video</span>
+            </label>
+
+            <label class="w-checkbox check-button-field">
+              <input type="checkbox" name="InterestedIn[]" value="Graphic Design" class="w-checkbox-input checkbox">
+              <span class="form-button-text w-form-label">Graphic Design</span>
+            </label>
+
+            <label class="w-checkbox check-button-field">
+              <input type="checkbox" name="InterestedIn[]" value="Animation" class="w-checkbox-input checkbox">
+              <span class="form-button-text w-form-label">Animation</span>
+            </label>
+
+            <label class="w-checkbox check-button-field">
+              <input type="checkbox" name="InterestedIn[]" value="Blue Build" class="w-checkbox-input checkbox">
+              <span class="form-button-text w-form-label">Blue Build</span>
+            </label>
+
+            <label class="w-checkbox check-button-field">
+              <input type="checkbox" name="InterestedIn[]" value="Subscription" class="w-checkbox-input checkbox">
+              <span class="form-button-text w-form-label">Subscription</span>
+            </label>
+          </div>
         </div>
+
         <div class="budget-wrap">
           <h1 class="form-heading">Your Budget (GBP)</h1>
-          <div class="budget"><label class="radio-button-field w-radio"><input type="radio" data-name="Budget" id="1k" name="Budget" class="w-form-formradioinput radio-button w-radio-input" value="&lt;£1k"><span class="form-button-text w-form-label" for="1k">&lt;£1k</span></label><label class="radio-button-field w-radio"><input type="radio" data-name="Budget" id="1k--5k" name="Budget" class="w-form-formradioinput radio-button-2 w-radio-input" value="£1k-£5k"><span class="form-button-text w-form-label" for="1k--5k">£1k-£5k</span></label><label class="radio-button-field w-radio"><input type="radio" data-name="Budget" id="5k--10k" name="Budget" class="w-form-formradioinput radio-button-3 w-radio-input" value="£5k-£10k"><span class="form-button-text w-form-label" for="5k--10k">£5k-£10k</span></label><label class="radio-button-field w-radio"><input type="radio" data-name="Budget" id="10k--20k" name="Budget" class="w-form-formradioinput radio-button-4 w-radio-input" value="£10k-£20k"><span class="form-button-text w-form-label" for="10k--20k">£10k-£20k</span></label><label class="radio-button-field w-radio"><input type="radio" data-name="Budget" id="20k" name="Budget" class="w-form-formradioinput radio-button-5 w-radio-input" value="£20k+"><span class="form-button-text w-form-label" for="20k">£20k+</span></label></div>
+
+          <div class="budget">
+            <label class="radio-button-field w-radio">
+              <input type="radio" name="Budget" value="<£1k" class="w-radio-input">
+              <span class="form-button-text w-form-label">&lt;£1k</span>
+            </label>
+
+            <label class="radio-button-field w-radio">
+              <input type="radio" name="Budget" value="£1k–£5k" class="w-radio-input">
+              <span class="form-button-text w-form-label">£1k–£5k</span>
+            </label>
+
+            <label class="radio-button-field w-radio">
+              <input type="radio" name="Budget" value="£5k–£10k" class="w-radio-input">
+              <span class="form-button-text w-form-label">£5k–£10k</span>
+            </label>
+
+            <label class="radio-button-field w-radio">
+              <input type="radio" name="Budget" value="£10k–£20k" class="w-radio-input">
+              <span class="form-button-text w-form-label">£10k–£20k</span>
+            </label>
+
+            <label class="radio-button-field w-radio">
+              <input type="radio" name="Budget" value="£20k+" class="w-radio-input">
+              <span class="form-button-text w-form-label">£20k+</span>
+            </label>
+          </div>
         </div>
-        <div class="form-desc-div"><label for="Description" class="form-heading">Tell us something about your needs / project</label><input class="text-field w-input" maxlength="256" name="Description" data-name="Description" placeholder="" type="text" id="Description"></div><input type="submit" data-wait="Please wait..." class="form-button w-button" value="Submit the request">
+
+        <div class="form-desc-div">
+          <label for="Description" class="form-heading">Tell us something about your project</label>
+          <input class="text-field w-input" name="Description" type="text" id="Description">
+        </div>
+
+        <input type="submit" class="form-button w-button" value="Submit the request">
       </form>
+
       <div class="w-form-done">
         <div>Thank you! Your submission has been received!</div>
       </div>
+
       <div class="w-form-fail">
         <div>Oops! Something went wrong while submitting the form.</div>
       </div>
+
     </div>
   </div>
 </section>
