--- a/contact.html
+++ b/contact.html
@@ -291,73 +291,85 @@ html, body {
 <section class="form-page">
   <div class="div-block-47">
     <div class="w-form">
-
       <form
         id="email-form"
         name="email-form"
+        data-name="Email Form"
         method="POST"
-        action="/"
         data-netlify="true"
-        data-netlify-honeypot="bot-field"
+        data-wf-page-id="693ae7ff5b346f45f8241fb0"
+        data-wf-element-id="9851e27c-ccc1-f57c-06b6-1c3517049e2d"
       >
-
-        <!-- Netlify required -->
         <input type="hidden" name="form-name" value="email-form">
-        <input type="hidden" name="bot-field">
 
         <div class="w-layout-grid grid-10">
           <div>
             <label for="name" class="form-heading">Name &amp; Company</label>
-            <input class="text-field w-input" name="name" type="text" id="name">
+            <input
+              class="text-field w-input"
+              maxlength="256"
+              name="name"
+              data-name="Name"
+              type="text"
+              id="name"
+            >
           </div>
 
           <div>
             <label for="email" class="form-heading">Your Email</label>
-            <input class="text-field w-input" name="email" type="email" id="email" required>
+            <input
+              class="text-field w-input"
+              maxlength="256"
+              name="email"
+              data-name="Email"
+              type="email"
+              id="email"
+              required
+            >
           </div>
         </div>
 
         <div class="interested-in-wrap">
-          <h1 class="form-heading">I’m interested in…</h1>
+          <h1 class="form-heading">I'm interested in...</h1>
 
           <div class="needs-wrap">
             <label class="w-checkbox check-button-field">
-              <input type="checkbox" name="InterestedIn[]" value="Branding" class="w-checkbox-input checkbox">
+              <input type="checkbox" id="Branding" name="Branding" class="w-checkbox-input checkbox">
               <span class="form-button-text w-form-label">Branding</span>
             </label>
 
             <label class="w-checkbox check-button-field">
-              <input type="checkbox" name="InterestedIn[]" value="Site from scratch" class="w-checkbox-input checkbox">
+              <input type="checkbox" id="Site-from-scratch" name="Site-from-scratch" class="w-checkbox-input checkbox">
               <span class="form-button-text w-form-label">Site from scratch</span>
             </label>
 
             <label class="w-checkbox check-button-field">
-              <input type="checkbox" name="InterestedIn[]" value="Maintenance" class="w-checkbox-input checkbox">
+              <input type="checkbox" id="Maintenance" name="Maintenance" class="w-checkbox-input checkbox">
               <span class="form-button-text w-form-label">Maintenance</span>
             </label>
 
             <label class="w-checkbox check-button-field">
-              <input type="checkbox" name="InterestedIn[]" value="Video" class="w-checkbox-input checkbox">
+              <input type="checkbox" id="Video" name="Video" class="w-checkbox-input checkbox">
               <span class="form-button-text w-form-label">Video</span>
             </label>
 
             <label class="w-checkbox check-button-field">
-              <input type="checkbox" name="InterestedIn[]" value="Graphic Design" class="w-checkbox-input checkbox">
+              <input type="checkbox" id="Graphic-Design" name="Graphic-Design" class="w-checkbox-input checkbox">
               <span class="form-button-text w-form-label">Graphic Design</span>
             </label>
 
             <label class="w-checkbox check-button-field">
-              <input type="checkbox" name="InterestedIn[]" value="Animation" class="w-checkbox-input checkbox">
+              <input type="checkbox" id="Animation" name="Animation" class="w-checkbox-input checkbox">
               <span class="form-button-text w-form-label">Animation</span>
             </label>
 
             <label class="w-checkbox check-button-field">
-              <input type="checkbox" name="InterestedIn[]" value="Blue Build" class="w-checkbox-input checkbox">
+              <input type="checkbox" id="Blue-Build" name="Blue-Build" class="w-checkbox-input checkbox">
               <span class="form-button-text w-form-label">Blue Build</span>
             </label>
 
             <label class="w-checkbox check-button-field">
-              <input type="checkbox" name="InterestedIn[]" value="Subscription" class="w-checkbox-input checkbox">
+              <input type="checkbox" id="Subscription" name="Subscription" class="w-checkbox-input checkbox">
               <span class="form-button-text w-form-label">Subscription</span>
             </label>
           </div>
@@ -368,38 +380,52 @@ html, body {
 
           <div class="budget">
             <label class="radio-button-field w-radio">
-              <input type="radio" name="Budget" value="<£1k" class="w-radio-input">
+              <input type="radio" id="1k" name="Budget" value="<£1k" class="w-radio-input">
               <span class="form-button-text w-form-label">&lt;£1k</span>
             </label>
 
             <label class="radio-button-field w-radio">
-              <input type="radio" name="Budget" value="£1k–£5k" class="w-radio-input">
-              <span class="form-button-text w-form-label">£1k–£5k</span>
+              <input type="radio" id="1k--5k" name="Budget" value="£1k-£5k" class="w-radio-input">
+              <span class="form-button-text w-form-label">£1k-£5k</span>
             </label>
 
             <label class="radio-button-field w-radio">
-              <input type="radio" name="Budget" value="£5k–£10k" class="w-radio-input">
-              <span class="form-button-text w-form-label">£5k–£10k</span>
+              <input type="radio" id="5k--10k" name="Budget" value="£5k-£10k" class="w-radio-input">
+              <span class="form-button-text w-form-label">£5k-£10k</span>
             </label>
 
             <label class="radio-button-field w-radio">
-              <input type="radio" name="Budget" value="£10k–£20k" class="w-radio-input">
-              <span class="form-button-text w-form-label">£10k–£20k</span>
+              <input type="radio" id="10k--20k" name="Budget" value="£10k-£20k" class="w-radio-input">
+              <span class="form-button-text w-form-label">£10k-£20k</span>
             </label>
 
             <label class="radio-button-field w-radio">
-              <input type="radio" name="Budget" value="£20k+" class="w-radio-input">
+              <input type="radio" id="20k" name="Budget" value="£20k+" class="w-radio-input">
               <span class="form-button-text w-form-label">£20k+</span>
             </label>
           </div>
         </div>
 
         <div class="form-desc-div">
-          <label for="Description" class="form-heading">Tell us something about your project</label>
-          <input class="text-field w-input" name="Description" type="text" id="Description">
+          <label for="Description" class="form-heading">
+            Tell us something about your needs / project
+          </label>
+          <input
+            class="text-field w-input"
+            maxlength="256"
+            name="Description"
+            data-name="Description"
+            type="text"
+            id="Description"
+          >
         </div>
 
-        <input type="submit" class="form-button w-button" value="Submit the request">
+        <input
+          type="submit"
+          data-wait="Please wait..."
+          class="form-button w-button"
+          value="Submit the request"
+        >
       </form>
 
       <div class="w-form-done">
@@ -409,10 +435,10 @@ html, body {
       <div class="w-form-fail">
         <div>Oops! Something went wrong while submitting the form.</div>
       </div>
-
     </div>
   </div>
 </section>
+
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=68c975cb862aeb40410727c7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
